[CrOS Tether] Notify default network changes for Ethernet -> Tether.

Previously, NetworkStateHandler contained the following bug:
  (1) Connect Ethernet network (the default network).
  (2) Connect Tether network (Ethernet is still default).
  (3) Disconnect Ethernet network (Tether should be the default).
  (4) NSH notifies that the new default is null, which is incorrect.

This issue was caused by an early return in
NetworkStateHandler::DefaultNetworkServiceChanged() which prevented the
default network change event from being propagated.

This CL fixes an issue which prevents ARC++ apps from utilizing a Tether
connection, since ARC++ relies on default network change events to
forward network connections to Android apps.

Bug: 766933, 672263
Change-Id: Ib4824bfef1d3e7faa86b631a7cc87870c818ab42
Reviewed-on: https://chromium-review.googlesource.com/809535
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522299}
Former-commit-id: 23a2216be7192733d86f5cf2fdac401ab96b6f65